Univariate Analysis for Sea Level Rise and Arctic Ice Area

--- a/climate_eda.ipynb
+++ b/climate_eda.ipynb
@@ -2,38 +2,110 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 3.14.0' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'c:/Users/Just-Acer/AppData/Local/Programs/Python/Python314/python.exe -m pip install ipykernel -U --user --force-reinstall'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mRunning cells with 'Python 3.14.0' requires the ipykernel package.\n",
-      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'c:/Users/Just-Acer/AppData/Local/Programs/Python/Python314/python.exe -m pip install ipykernel -U --user --force-reinstall'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Global Average Temperature (°C)</th>\n",
+       "      <th>CO2 Concentration (ppm)</th>\n",
+       "      <th>Sea Level Rise (mm)</th>\n",
+       "      <th>Arctic Ice Area (million km²)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1948</td>\n",
+       "      <td>13.17</td>\n",
+       "      <td>397.04</td>\n",
+       "      <td>116.25</td>\n",
+       "      <td>5.97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1996</td>\n",
+       "      <td>13.10</td>\n",
+       "      <td>313.17</td>\n",
+       "      <td>277.92</td>\n",
+       "      <td>9.66</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>14.67</td>\n",
+       "      <td>311.95</td>\n",
+       "      <td>290.32</td>\n",
+       "      <td>8.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1966</td>\n",
+       "      <td>14.79</td>\n",
+       "      <td>304.25</td>\n",
+       "      <td>189.71</td>\n",
+       "      <td>11.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1992</td>\n",
+       "      <td>13.15</td>\n",
+       "      <td>354.52</td>\n",
+       "      <td>14.84</td>\n",
+       "      <td>11.23</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Year  Global Average Temperature (°C)  CO2 Concentration (ppm)  \\\n",
+       "0  1948                            13.17                   397.04   \n",
+       "1  1996                            13.10                   313.17   \n",
+       "2  2015                            14.67                   311.95   \n",
+       "3  1966                            14.79                   304.25   \n",
+       "4  1992                            13.15                   354.52   \n",
+       "\n",
+       "   Sea Level Rise (mm)  Arctic Ice Area (million km²)  \n",
+       "0               116.25                           5.97  \n",
+       "1               277.92                           9.66  \n",
+       "2               290.32                           8.40  \n",
+       "3               189.71                          11.83  \n",
+       "4                14.84                          11.23  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -42,22 +114,255 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Univariate Analysis\n",
+    "Perform univariate analysis for each climate variable"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Calculate descriptive statistics for 'Sea Level Rise (mm)'\n",
+    "sea_level_rise_stats = {\n",
+    "    'Statistics': ['Mean', 'Median', 'Range', 'Standard Deviation', 'Minimum', 'Maximum'],\n",
+    "    'Value': [\n",
+    "        round(df['Sea Level Rise (mm)'].mean(), 2),\n",
+    "        round(df['Sea Level Rise (mm)'].median(), 2),\n",
+    "        round(df['Sea Level Rise (mm)'].max() - df['Sea Level Rise (mm)'].min(), 2),\n",
+    "        round(df['Sea Level Rise (mm)'].std(), 2),\n",
+    "        round(df['Sea Level Rise (mm)'].min(), 2),\n",
+    "        round(df['Sea Level Rise (mm)'].max(), 2)\n",
+    "    ]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Statistics</th>\n",
+       "      <th>Value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Mean</td>\n",
+       "      <td>149.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Median</td>\n",
+       "      <td>150.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Range</td>\n",
+       "      <td>300.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Standard Deviation</td>\n",
+       "      <td>86.58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Minimum</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Maximum</td>\n",
+       "      <td>300.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Statistics   Value\n",
+       "0                Mean  149.99\n",
+       "1              Median  150.02\n",
+       "2               Range  300.00\n",
+       "3  Standard Deviation   86.58\n",
+       "4             Minimum    0.00\n",
+       "5             Maximum  300.00"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sea_level_rise_stats_df = pd.DataFrame(sea_level_rise_stats)\n",
+    "sea_level_rise_stats_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### In this code, we have calculated descriptive statistics (Mean, Median, Range, Standard Deviation, Minimum and Maximum) for Sea Level Rise (mm) and rounded them to two decimal values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Calculate descriptive statistics for 'Arctic Ice Area (million km²)'\n",
+    "arctic_ice_area_stats = {\n",
+    "    'Statistics': ['Mean', 'Median', 'Range', 'Standard Deviation', 'Minimum', 'Maximum'],\n",
+    "    'Value': [\n",
+    "        round(df['Arctic Ice Area (million km²)'].mean(), 2),\n",
+    "        round(df['Arctic Ice Area (million km²)'].median(), 2),\n",
+    "        round(df['Arctic Ice Area (million km²)'].max() - df['Arctic Ice Area (million km²)'].min(), 2),\n",
+    "        round(df['Arctic Ice Area (million km²)'].std(), 2),\n",
+    "        round(df['Arctic Ice Area (million km²)'].min(), 2),\n",
+    "        round(df['Arctic Ice Area (million km²)'].max(), 2)\n",
+    "    ]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Statistics</th>\n",
+       "      <th>Value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Mean</td>\n",
+       "      <td>9.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Median</td>\n",
+       "      <td>9.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Range</td>\n",
+       "      <td>12.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Standard Deviation</td>\n",
+       "      <td>3.46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Minimum</td>\n",
+       "      <td>3.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Maximum</td>\n",
+       "      <td>15.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Statistics  Value\n",
+       "0                Mean   9.00\n",
+       "1              Median   9.00\n",
+       "2               Range  12.00\n",
+       "3  Standard Deviation   3.46\n",
+       "4             Minimum   3.00\n",
+       "5             Maximum  15.00"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arctic_ice_area_stats_df = pd.DataFrame(arctic_ice_area_stats)\n",
+    "arctic_ice_area_stats_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### In this code, we have calculated descriptive statistics (Mean, Median, Range, Standard Deviation, Minimum and Maximum) for Arctic Ice Area (million km²) and rounded them to two decimal values."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.14.0"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
