df grouped by year.  Fixes #5

--- a/climate_eda.ipynb
+++ b/climate_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
        "4                14.84                          11.23  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -243,6 +243,179 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Global Average Temperature (°C)</th>\n",
+       "      <th>CO2 Concentration (ppm)</th>\n",
+       "      <th>Sea Level Rise (mm)</th>\n",
+       "      <th>Arctic Ice Area (million km²)</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Year</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1900</th>\n",
+       "      <td>14.506663</td>\n",
+       "      <td>350.373405</td>\n",
+       "      <td>150.408288</td>\n",
+       "      <td>8.978659</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1901</th>\n",
+       "      <td>14.485343</td>\n",
+       "      <td>349.757140</td>\n",
+       "      <td>150.548828</td>\n",
+       "      <td>8.947272</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1902</th>\n",
+       "      <td>14.476262</td>\n",
+       "      <td>349.299686</td>\n",
+       "      <td>152.174821</td>\n",
+       "      <td>9.035554</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1903</th>\n",
+       "      <td>14.492360</td>\n",
+       "      <td>349.644375</td>\n",
+       "      <td>150.138338</td>\n",
+       "      <td>9.056501</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1904</th>\n",
+       "      <td>14.494241</td>\n",
+       "      <td>349.537032</td>\n",
+       "      <td>150.667318</td>\n",
+       "      <td>8.990691</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019</th>\n",
+       "      <td>14.500105</td>\n",
+       "      <td>348.642249</td>\n",
+       "      <td>151.020415</td>\n",
+       "      <td>9.014690</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2020</th>\n",
+       "      <td>14.496937</td>\n",
+       "      <td>350.021731</td>\n",
+       "      <td>150.219741</td>\n",
+       "      <td>9.054254</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021</th>\n",
+       "      <td>14.501424</td>\n",
+       "      <td>350.150302</td>\n",
+       "      <td>150.187456</td>\n",
+       "      <td>8.968700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022</th>\n",
+       "      <td>14.495233</td>\n",
+       "      <td>350.493023</td>\n",
+       "      <td>148.857646</td>\n",
+       "      <td>8.942012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023</th>\n",
+       "      <td>14.474559</td>\n",
+       "      <td>351.003294</td>\n",
+       "      <td>148.355918</td>\n",
+       "      <td>8.984517</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>124 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Global Average Temperature (°C)  CO2 Concentration (ppm)  \\\n",
+       "Year                                                             \n",
+       "1900                        14.506663               350.373405   \n",
+       "1901                        14.485343               349.757140   \n",
+       "1902                        14.476262               349.299686   \n",
+       "1903                        14.492360               349.644375   \n",
+       "1904                        14.494241               349.537032   \n",
+       "...                               ...                      ...   \n",
+       "2019                        14.500105               348.642249   \n",
+       "2020                        14.496937               350.021731   \n",
+       "2021                        14.501424               350.150302   \n",
+       "2022                        14.495233               350.493023   \n",
+       "2023                        14.474559               351.003294   \n",
+       "\n",
+       "      Sea Level Rise (mm)  Arctic Ice Area (million km²)  \n",
+       "Year                                                      \n",
+       "1900           150.408288                       8.978659  \n",
+       "1901           150.548828                       8.947272  \n",
+       "1902           152.174821                       9.035554  \n",
+       "1903           150.138338                       9.056501  \n",
+       "1904           150.667318                       8.990691  \n",
+       "...                   ...                            ...  \n",
+       "2019           151.020415                       9.014690  \n",
+       "2020           150.219741                       9.054254  \n",
+       "2021           150.187456                       8.968700  \n",
+       "2022           148.857646                       8.942012  \n",
+       "2023           148.355918                       8.984517  \n",
+       "\n",
+       "[124 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Aggregate the data by year, computing the average for each climate variable\n",
+    "\n",
+    "df_grouped_by_year = df.groupby(\"Year\").mean()\n",
+    "df_grouped_by_year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -251,7 +424,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -265,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
