Completed data preparation task

--- a/climate_eda.ipynb
+++ b/climate_eda.ipynb
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -406,6 +406,70 @@
     "df_grouped_by_year = df.groupby(\"Year\").mean()\n",
     "df_grouped_by_year"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Documentation -Data Preparation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Load the Dataset:\n",
+    "- The dataset Climate_Change_Indicators.csv is loaded into a Pandas DataFrame using the following command:\n",
+    "df = pd.read_csv('data/Climate_Change_Indicators.csv')\n",
+    "df.head(5)\n",
+    "\n",
+    "This reads the CSV file and displays the first five rows for a quick preview.\n",
+    "\n",
+    "\n",
+    "\n",
+    "2. Check for Missing Values:\n",
+    "- To ensure data quality, we check for missing values in each column:\n",
+    "\n",
+    "missing_values = df.isnull().sum()\n",
+    "print(\"Missing values in each column:\\n\", missing_values)\n",
+    "\n",
+    "The .isnull() method identifies missing values (NaN).\n",
+    ".sum() counts the number of missing values in each column.\n",
+    "The output confirms that there are no missing values in the dataset, so no cleaning is required.\n",
+    "\n",
+    "3. Check for Inconsistencies\n",
+    "- Before proceeding with analysis, the dataset is checked for inconsistencies like incorrect data types, duplicate records, and anomalies. If necessary, corrections are applied.\n",
+    "\n",
+    "\n",
+    "4. Aggregate Data by Year\n",
+    "- To analyze trends over time, the dataset is grouped by year, and the average of each variable is calculated:\n",
+    "\n",
+    "df_grouped_by_year = df.groupby(\"Year\").mean()\n",
+    "df_grouped_by_year.head()\n",
+    "- This groups the dataset by Year and calculates the mean of all numerical variables.\n",
+    "\n",
+    "Conclusion:\n",
+    "- The data is successfully loaded.\n",
+    "- No missing values were found.\n",
+    "- The Year column was verified for inconsistencies, ensuring only values between 1980 and 2023 exist.\n",
+    "- The data was aggregated by year to prepare for further analysis.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
