Descriptive stats for global temp and Co2 concentration

--- a/climate_eda.ipynb
+++ b/climate_eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
        "4                14.84                          11.23  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,7 @@
        "[124 rows x 4 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,26 +469,93 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "###Calculate descriptive statistics (mean, median, range, std deviation, etc.) for Global Temperature and CO2 Concentration."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Mean': 14.499537887573245,\n",
+       " 'Median': 14.5,\n",
+       " 'Minimum': 13.0,\n",
+       " 'Maximum': 16.0,\n",
+       " 'Range': 3.0,\n",
+       " 'Std_dev': 0.8661005293623816}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Descripitve statistics for Global Temperature\n",
+    "\n",
+    "globalTemperature_col = df['Global Average Temperature (°C)']\n",
+    "\n",
+    "globalTemperature_stats = {\n",
+    "    \n",
+    "        'Mean':     globalTemperature_col.mean(),\n",
+    "        'Median':   globalTemperature_col.median(),\n",
+    "        'Minimum':  globalTemperature_col.min(),\n",
+    "        'Maximum':  globalTemperature_col.max(),\n",
+    "        'Range':   globalTemperature_col.max() - globalTemperature_col.min(),\n",
+    "        'Std_dev':   globalTemperature_col.std()\n",
+    "    \n",
+    "}\n",
+    "globalTemperature_stats"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Mean': 350.02801796913167,\n",
+       " 'Median': 350.07,\n",
+       " 'Minimum': 280.0,\n",
+       " 'Maximum': 420.0,\n",
+       " 'Range': 140.0,\n",
+       " 'Std_dev': 40.42409299643305}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Descripitve statistics for CO2 Concentration\n",
+    "\n",
+    "\n",
+    "co2_concentration_col = df['CO2 Concentration (ppm)']\n",
+    "\n",
+    "co2_concentration_stats = {\n",
+    "    \n",
+    "        'Mean':     co2_concentration_col.mean(),\n",
+    "        'Median':   co2_concentration_col.median(),\n",
+    "        'Minimum':  co2_concentration_col.min(),\n",
+    "        'Maximum':  co2_concentration_col.max(),\n",
+    "        'Range':   co2_concentration_col.max() - co2_concentration_col.min(),\n",
+    "        'Std_dev':   co2_concentration_col.std()\n",
+    "    \n",
+    "}\n",
+    "co2_concentration_stats"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -502,7 +569,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
