Completed Commented Changes(Fixes #10)

--- a/climate_eda.ipynb
+++ b/climate_eda.ipynb
@@ -352,16 +352,113 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Create appropriate visualizations (histograms and box plots) for Sea Level Rise and Arctic Ice Area.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#  Histogram Plot for Sea Level Rise over the years\n",
+    "\n",
+    "plt.figure(figsize=(8,5))\n",
+    "sns.histplot(df_grouped_by_year['Sea Level Rise (mm)'], bins=50, kde=True, color='blue')\n",
+    "plt.xlabel('Sea Level Rise (mm)')\n",
+    "plt.ylabel('Frequency')\n",
+    "plt.title('Sea Level Rise Over the Years')\n",
+    "plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  Histogram Plot for Arctic Ice Area over the years\n",
+    "plt.figure(figsize=(8,5))\n",
+    "sns.histplot(df_grouped_by_year['Arctic Ice Area (million km²)'], bins=30, kde=True, color='green')\n",
+    "plt.xlabel('Arctic Ice Area (million km²)')  # Corrected label\n",
+    "plt.ylabel('Frequency')  # Corrected label\n",
+    "plt.title('Arctic Ice Area Over the Years')\n",
+    "plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Created a new column for decade\n",
+    "df_grouped_by_year['Decade'] = (df_grouped_by_year.index // 10) * 10\n",
+    "\n",
+    "#Created a new DataFrame for the boxplot\n",
+    "df_for_sea_level_box_plot = df_grouped_by_year[['Sea Level Rise (mm)', 'Decade']].reset_index()\n",
+    "df_for_sea_level_box_plot.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.boxplot(x='Decade', y='Sea Level Rise (mm)', data=df_for_sea_level_box_plot, hue='Decade', dodge=True)\n",
+    "\n",
+    "# Customizing the plot\n",
+    "plt.title('Boxplot of Sea Level Rise by Decade')\n",
+    "plt.xlabel('Decade')\n",
+    "plt.ylabel('Sea Level Rise (mm)')\n",
+    "\n",
+    "# Placing the legend outside the box\n",
+    "plt.legend(title='20 Years Interval', loc='upper left', bbox_to_anchor=(1, 1))\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_for_artic_ice_box_plot = df_grouped_by_year[['Arctic Ice Area (million km²)','Decade']].reset_index()\n",
+    "df_for_artic_ice_box_plot.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(10, 6))\n",
+    "sns.boxplot(x='Decade', y='Arctic Ice Area (million km²)', data=df_for_artic_ice_box_plot, hue='Decade', dodge=True)\n",
+    "\n",
+    "plt.title('Boxplot of Arctic Ice Area (million km²) by Decade')\n",
+    "plt.xlabel('Decade')\n",
+    "plt.ylabel('Arctic Ice Area (million km²)')\n",
+    "\n",
+    "plt.legend(title='20 Years Interval', loc='upper left', bbox_to_anchor=(1, 1))\n",
+    "\n",
+    "plt.tight_layout() \n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -375,7 +472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
