Univariate document phase-1

--- a/climate_eda.ipynb
+++ b/climate_eda.ipynb
@@ -1122,11 +1122,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "##Document - Identification and discussion on trends, outliers and distribution for each climate's data.\n",
+    "\n",
+    "1. Global Average Temperature\n",
+    "    \n",
+    "    Trends:\n",
+    "        - The mean temperature is 14.5°C, with a median of 14.5°C, suggesting that the data is fairly balanced around the central value.\n",
+    "        - The maximum (16.0°C) and minimum (13.0°C) values indicate a small range of 3.0°C, suggesting that\n",
+    "        global temperature changes over the recorded period are relatively stable.\n",
+    "        - Based on these statistics, there doesn't appear to be a strong trend of increasing or decreasing global temperature over the period; it remains relatively stable. \n",
+    "\n",
+    "\n",
+    "2. CO2 Concentration\n",
+    "\n",
+    "    Trends:\n",
+    "        - The mean CO2 concentration is 350.03 ppm, and the median is 350.07 ppm, showing a fairly balanced distribution around this value.\n",
+    "        - With a range of 140.0 ppm (from 280.0 ppm to 420.0 ppm), there appears to be greater variability in CO2 levels compared to the global temperature.\n",
+    "        - The increasing variability in CO2 levels could suggest changes in emissions or other environmental factors over time. \n",
+    "\n",
+    "  \n",
+    "  \n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -1145,7 +1165,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
