Univariate Documentation Phase 3

--- a/climate_eda.ipynb
+++ b/climate_eda.ipynb
@@ -1151,9 +1151,20 @@
     "        - The minimum value is 280.0 ppm and the maximum is 420.0 ppm, with a standard deviation of 40.42 ppm.\n",
     "        - Given the range of CO2 concentration (140.0 ppm), the lower values around 280.0 ppm and higher values around 420.0 ppm could be seen as potential outliers. The large range and relatively high standard deviation indicate that some data points may deviate significantly from the mean.\n",
     "\n",
-    "  \n",
-    "  \n",
-    "\n"
+    "3. Arctic Ice Area:\n",
+    "\n",
+    "    - Trends: \n",
+    "        - There is a declining trend in Arctic Ice Area over the decades, indicating significant environmental changes due to climate change.\n",
+    "        - The reduction in ice coverage suggests that rising global temperatures are contributing to accelerated melting of Arctic ice, leading to more pronounced seasonal fluctuations.\n",
+    "        - Continuous monitoring reveals that recent decades have experienced faster rates of ice loss, emphasizing the urgent need for climate action to mitigate further impacts.\n",
+    "\n",
+    "\n",
+    "4. Sea Level Rise:\n",
+    "\n",
+    "    - Trends:\n",
+    "        - An upward trend in Sea Level Rise measurements is observed over the decades, correlating with melting polar ice caps and thermal expansion of seawater.\n",
+    "        - This increase in sea levels suggests a persistent threat to coastal communities and ecosystems, as higher levels can lead to more frequent and severe flooding events.\n",
+    "        - Recent data indicate that the rate of sea level rise has accelerated in the last few decades, highlighting the urgent need for adaptive strategies to protect vulnerable areas."
    ]
   },
   {
