Univariate documentation phase 4

--- a/climate_eda.ipynb
+++ b/climate_eda.ipynb
@@ -1129,27 +1129,37 @@
     "\n",
     "1. Global Average Temperature\n",
     "    \n",
-    "    Trends:\n",
+    "    - Trends:\n",
     "        - The mean temperature is 14.5°C, with a median of 14.5°C, suggesting that the data is fairly balanced around the central value.\n",
     "        - The maximum (16.0°C) and minimum (13.0°C) values indicate a small range of 3.0°C, suggesting that\n",
     "        global temperature changes over the recorded period are relatively stable.\n",
     "        - Based on these statistics, there doesn't appear to be a strong trend of increasing or decreasing global temperature over the period; it remains relatively stable. \n",
     "\n",
-    "    Outliers:\n",
+    "    - Outliers:\n",
     "        - The minimum and maximum values (13.0°C and 16.0°C) are within a reasonable range, considering the standard deviation of 0.87°C.\n",
     "        - There do not seem to be any extreme outliers, as all values fall within a narrow range and are close to the mean. No extreme deviations from the expected values are noted.\n",
+    "    \n",
+    "    - Distributions:\n",
+    "       - The mean and median values being nearly equal suggest a normal or symmetric distribution, with most temperature values clustered around the central mean. \n",
+    "        - The low standard deviation (0.87°C) further supports the idea of a narrow, stable distribution of temperatures.\n",
+    "          \n",
     "\n",
     "\n",
     "2. CO2 Concentration\n",
     "\n",
-    "    Trends:\n",
+    "    - Trends:\n",
     "        - The mean CO2 concentration is 350.03 ppm, and the median is 350.07 ppm, showing a fairly balanced distribution around this value.\n",
     "        - With a range of 140.0 ppm (from 280.0 ppm to 420.0 ppm), there appears to be greater variability in CO2 levels compared to the global temperature.\n",
     "        - The increasing variability in CO2 levels could suggest changes in emissions or other environmental factors over time. \n",
     "\n",
-    "      Outliers:\n",
+    "    - Outliers:\n",
     "        - The minimum value is 280.0 ppm and the maximum is 420.0 ppm, with a standard deviation of 40.42 ppm.\n",
     "        - Given the range of CO2 concentration (140.0 ppm), the lower values around 280.0 ppm and higher values around 420.0 ppm could be seen as potential outliers. The large range and relatively high standard deviation indicate that some data points may deviate significantly from the mean.\n",
+    "\n",
+    "    - Distributions:\n",
+    "        -  CO2 concentration values show a wider distribution, as indicated by the large range (140.0 ppm) and a standard deviation of 40.42 ppm. \n",
+    "        - The mean and median being close suggests a roughly normal distribution, but the broader spread indicates greater variability in CO2 levels compared to temperature.\n",
+    "\n",
     "\n",
     "3. Arctic Ice Area:\n",
     "\n",
@@ -1158,19 +1168,30 @@
     "        - The reduction in ice coverage suggests that rising global temperatures are contributing to accelerated melting of Arctic ice, leading to more pronounced seasonal fluctuations.\n",
     "        - Continuous monitoring reveals that recent decades have experienced faster rates of ice loss, emphasizing the urgent need for climate action to mitigate further impacts.\n",
     "\n",
+    "    - Outliers: --> Anita dd\n",
+    "\n",
+    "    - Distributions:\n",
+    "        - The histogram for Arctic Ice Area likely shows a negatively skewed distribution, indicating that most years have lower ice coverage, with fewer years experiencing higher values.\n",
+    "        - This skewness suggests a general decline in ice area, with occasional spikes representing years with higher ice coverage due to specific weather patterns or anomalies.\n",
+    "        - Understanding this distribution is important for assessing the long-term trends and impacts of climate change on Arctic ecosystems.\n",
+    "\n",
+    "\n",
     "\n",
     "4. Sea Level Rise:\n",
     "\n",
     "    - Trends:\n",
     "        - An upward trend in Sea Level Rise measurements is observed over the decades, correlating with melting polar ice caps and thermal expansion of seawater.\n",
     "        - This increase in sea levels suggests a persistent threat to coastal communities and ecosystems, as higher levels can lead to more frequent and severe flooding events.\n",
-    "        - Recent data indicate that the rate of sea level rise has accelerated in the last few decades, highlighting the urgent need for adaptive strategies to protect vulnerable areas."
+    "        - Recent data indicate that the rate of sea level rise has accelerated in the last few decades, highlighting the urgent need for adaptive strategies to protect vulnerable areas.\n",
+    "\n",
+    "    - Outliers: --> Anita dd\n",
+    "\n",
+    "    - Distributions:\n",
+    "        - The histogram for Sea Level Rise may exhibit a right-skewed distribution, indicating a concentration of lower measurements with a tail extending toward higher values.\n",
+    "        - This distribution suggests that while most years experience relatively stable sea levels, there are significant instances of higher sea levels that could lead to flooding and other environmental concerns.\n",
+    "        - Analyzing the distribution of sea level rise measurements is essential for predicting future changes and planning for potential risks to coastal communities.\n",
+    "\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
