Fix: Compute Correlations

--- a/climate_eda.ipynb
+++ b/climate_eda.ipynb
@@ -1703,7 +1703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1727,52 +1727,52 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Year</th>\n",
        "      <th>Global Average Temperature (°C)</th>\n",
        "      <th>CO2 Concentration (ppm)</th>\n",
        "      <th>Sea Level Rise (mm)</th>\n",
        "      <th>Arctic Ice Area (million km²)</th>\n",
-       "      <th>Decade</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Global Average Temperature (°C)</th>\n",
+       "      <th>Year</th>\n",
        "      <td>1.000000</td>\n",
-       "      <td>-0.067980</td>\n",
-       "      <td>0.003878</td>\n",
-       "      <td>0.047027</td>\n",
-       "      <td>-0.041674</td>\n",
+       "      <td>-0.000500</td>\n",
+       "      <td>0.000945</td>\n",
+       "      <td>-0.000969</td>\n",
+       "      <td>-0.000881</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Global Average Temperature (°C)</th>\n",
+       "      <td>-0.000500</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.001417</td>\n",
+       "      <td>-0.000013</td>\n",
+       "      <td>0.000702</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>CO2 Concentration (ppm)</th>\n",
-       "      <td>-0.067980</td>\n",
+       "      <td>0.000945</td>\n",
+       "      <td>-0.001417</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>0.098212</td>\n",
-       "      <td>0.009986</td>\n",
-       "      <td>0.091921</td>\n",
+       "      <td>0.000206</td>\n",
+       "      <td>-0.000541</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Sea Level Rise (mm)</th>\n",
-       "      <td>0.003878</td>\n",
-       "      <td>0.098212</td>\n",
+       "      <td>-0.000969</td>\n",
+       "      <td>-0.000013</td>\n",
+       "      <td>0.000206</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>0.129528</td>\n",
-       "      <td>-0.088954</td>\n",
+       "      <td>0.000825</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Arctic Ice Area (million km²)</th>\n",
-       "      <td>0.047027</td>\n",
-       "      <td>0.009986</td>\n",
-       "      <td>0.129528</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>-0.076943</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Decade</th>\n",
-       "      <td>-0.041674</td>\n",
-       "      <td>0.091921</td>\n",
-       "      <td>-0.088954</td>\n",
-       "      <td>-0.076943</td>\n",
+       "      <td>-0.000881</td>\n",
+       "      <td>0.000702</td>\n",
+       "      <td>-0.000541</td>\n",
+       "      <td>0.000825</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1780,44 +1780,37 @@
        "</div>"
       ],
       "text/plain": [
-       "                                 Global Average Temperature (°C)  \\\n",
-       "Global Average Temperature (°C)                         1.000000   \n",
-       "CO2 Concentration (ppm)                                -0.067980   \n",
-       "Sea Level Rise (mm)                                     0.003878   \n",
-       "Arctic Ice Area (million km²)                           0.047027   \n",
-       "Decade                                                 -0.041674   \n",
+       "                                     Year  Global Average Temperature (°C)  \\\n",
+       "Year                             1.000000                        -0.000500   \n",
+       "Global Average Temperature (°C) -0.000500                         1.000000   \n",
+       "CO2 Concentration (ppm)          0.000945                        -0.001417   \n",
+       "Sea Level Rise (mm)             -0.000969                        -0.000013   \n",
+       "Arctic Ice Area (million km²)   -0.000881                         0.000702   \n",
        "\n",
        "                                 CO2 Concentration (ppm)  Sea Level Rise (mm)  \\\n",
-       "Global Average Temperature (°C)                -0.067980             0.003878   \n",
-       "CO2 Concentration (ppm)                         1.000000             0.098212   \n",
-       "Sea Level Rise (mm)                             0.098212             1.000000   \n",
-       "Arctic Ice Area (million km²)                   0.009986             0.129528   \n",
-       "Decade                                          0.091921            -0.088954   \n",
+       "Year                                            0.000945            -0.000969   \n",
+       "Global Average Temperature (°C)                -0.001417            -0.000013   \n",
+       "CO2 Concentration (ppm)                         1.000000             0.000206   \n",
+       "Sea Level Rise (mm)                             0.000206             1.000000   \n",
+       "Arctic Ice Area (million km²)                  -0.000541             0.000825   \n",
        "\n",
-       "                                 Arctic Ice Area (million km²)    Decade  \n",
-       "Global Average Temperature (°C)                       0.047027 -0.041674  \n",
-       "CO2 Concentration (ppm)                               0.009986  0.091921  \n",
-       "Sea Level Rise (mm)                                   0.129528 -0.088954  \n",
-       "Arctic Ice Area (million km²)                         1.000000 -0.076943  \n",
-       "Decade                                               -0.076943  1.000000  "
+       "                                 Arctic Ice Area (million km²)  \n",
+       "Year                                                 -0.000881  \n",
+       "Global Average Temperature (°C)                       0.000702  \n",
+       "CO2 Concentration (ppm)                              -0.000541  \n",
+       "Sea Level Rise (mm)                                   0.000825  \n",
+       "Arctic Ice Area (million km²)                         1.000000  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "corelation_matrix = df_grouped_by_year.corr()\n",
+    "corelation_matrix = df.corr()\n",
     "corelation_matrix"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
